--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,3 +8,4 @@ quarkus.datasource.jdbc.url = jdbc:postgresql://localhost:5432/project_db
 quarkus.hibernate-orm.database.generation=drop-and-create
 
 quarkus.hibernate-orm.log.sql=true
+quarkus.smallrye-openapi.path=/swagger
