--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,3 +9,5 @@ quarkus.hibernate-orm.database.generation=drop-and-create
 
 quarkus.hibernate-orm.log.sql=true
 quarkus.smallrye-openapi.path=/swagger
+quarkus.rest-client."rest.client.CountryClient".url=https://date.nager.at/
+quarkus.rest-client."rest.client.IPLog".url=https://api-bdc.net
